Fixed header checks
git-svn-id: https://projects.nth-dimension.org.uk/subversion/smaSHeM/trunk@125 da283472-e30e-4bd4-a68d-706198139375

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,7 @@
+    C++ compiler
+* Cleaned up error messages in configure
+* Fixed header checks
+
 0.1 - 0.2
 
 * Fixed minor bug in distclean target of Makefile
