Added new pkg-config and header checks
git-svn-id: https://projects.nth-dimension.org.uk/subversion/smaSHeM/trunk@128 da283472-e30e-4bd4-a68d-706198139375

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,6 +1,10 @@
     C++ compiler
 * Cleaned up error messages in configure
 * Fixed header checks
+* Added image dumping support
+* Added new pkg-config and header checks
+* Added man/smaSHeM.1 man page
+* Fixed Makefile generation in configure
 
 0.1 - 0.2
 
