--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -6,6 +6,7 @@
 * Added man/smaSHeM.1 man page
 * Fixed Makefile generation in configure
 * Removed duplicate header checks in configure
+* Fixed Makefile
 
 0.1 - 0.2
 
