--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -7,6 +7,7 @@
 * Fixed Makefile generation in configure
 * Removed duplicate header checks in configure
 * Fixed Makefile
+* Ran autoreconf --force --install
 
 0.1 - 0.2
 
