Modernised configure.ac
git-svn-id: https://projects.nth-dimension.org.uk/subversion/smaSHeM/trunk@136 da283472-e30e-4bd4-a68d-706198139375

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -8,6 +8,7 @@
 * Removed duplicate header checks in configure
 * Fixed Makefile
 * Ran autoreconf --force --install
+* Added man/Makefile.in
 
 0.1 - 0.2
 
