--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -10,6 +10,7 @@
 * Ran autoreconf --force --install
 * Added man/Makefile.in
 * Added config.h.in
+* Added -v option to smaSHeM.c to display version and updated man/smaSHeM.1 man
 
 0.1 - 0.2
 
