Removed duplicate header checks in configure
git-svn-id: https://projects.nth-dimension.org.uk/subversion/smaSHeM/trunk@140 da283472-e30e-4bd4-a68d-706198139375

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -11,6 +11,7 @@
 * Added man/Makefile.in
 * Added config.h.in
 * Added -v option to smaSHeM.c to display version and updated man/smaSHeM.1 man
+  page to reflect this
 
 0.1 - 0.2
 
