--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -13,6 +13,7 @@
 * Added -v option to smaSHeM.c to display version and updated man/smaSHeM.1 man
   page to reflect this
 
+* Fixed Makefile
 
 0.1 - 0.2
 
