--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -12,8 +12,8 @@
 * Added config.h.in
 * Added -v option to smaSHeM.c to display version and updated man/smaSHeM.1 man
   page to reflect this
+* Fixed copyright dates on src/smaSHeM.{cpp,h}
 
-* Fixed Makefile
 
 0.1 - 0.2
 
