Added -v option to smaSHeM.c to display version and updated man/smaSHeM.1 man page to reflect this
git-svn-id: https://projects.nth-dimension.org.uk/subversion/smaSHeM/trunk@148 da283472-e30e-4bd4-a68d-706198139375

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,8 @@
+0.3 - 0.4
+
+* Fixed header checks in configure
+* Updated missing
+  * This included moving smaSHeM.c to smaSHeM.cpp to force compilation using
     C++ compiler
 * Cleaned up error messages in configure
 * Added function checks in configure
