--- a/man/smaSHeM.1
+++ b/man/smaSHeM.1
@@ -5,6 +5,8 @@
 smaSHeM \- a System V shared memory segment manipulator
 .SH SYNOPSIS
 .B smaSHeM
+-v
+|
 -i
 <
 .I shmemid
@@ -54,6 +56,9 @@ yend
 .B smaSHeM
 is a System V shared memory segment manipulator.
 .SH OPTIONS
+.TP 15
+.I -v
+Displays the version number andd terminates.
 .TP 15
 .I shmemid
 Specifies the segment identifier.
