Fixed copyright dates on src/smaSHeM.{cpp,h}
git-svn-id: https://projects.nth-dimension.org.uk/subversion/smaSHeM/trunk@149 da283472-e30e-4bd4-a68d-706198139375

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -2,6 +2,7 @@
 
 * Fixed header checks in configure
 * Updated missing
+* Added new pkg-config and header checks to configure
   * This included moving smaSHeM.c to smaSHeM.cpp to force compilation using
     C++ compiler
 * Cleaned up error messages in configure
