Replaced calls to malloc with calloc const'ified function parameters Cleaned up void * arithmetic Made fork check unambiguous Removed unnecessary memset
git-svn-id: https://projects.nth-dimension.org.uk/subversion/smaSHeM/trunk@151 da283472-e30e-4bd4-a68d-706198139375

--- a/doc/ChangeLog
+++ b/doc/ChangeLog
@@ -1,3 +1,17 @@
+0.4 - 0.5
+
+* Replaced calls to malloc with calloc
+
+From http://cvsweb.netbsd.org/bsdweb.cgi/pkgsrc/security/smaSHeM/patches/patch-src_smaSHeM.cpp:
+
+* const'ified function parameters
+* Cleaned up void * arithmetic
+
+From cppcheck:
+
+* Made fork check unambiguous
+* Removed unnecessary memset
+
 0.3 - 0.4
 
 * Fixed header checks in configure
