--- a/doc/INSTALL
+++ b/doc/INSTALL
@@ -4,5 +4,5 @@ To install:
 2) make
 3) make install
 
-The latest version of smashem can always be found at
+The latest version of smaSHeM can always be found at
 <http://www.nth-dimension.org.uk/>.
